- Fix memory leak when using wx from non-wx threads (Antti Nietosvaara, #23535).
- Use grep instead of fgrep and egrep in makefiles/scripts (#23537).
- Use /etc/os-release if lsb_release isn't available (Scott Talbert, #23712).
- Add wxUILocale::GetMonthName() and GetWeekDayName() (Ulrich Telle, #23556).
- Support WAV files with LIST chunks under Unix (A. Jiang, #23859).

All (GUI):

- Fix wxFLEX_GROWMODE_ALL in wxFlexGridSizer with proportions (#23253).
- Fix wxEditorDialogProperty in wxPropertyGrid (#23272).
- Fix entering dates in wxGenericDatePicker in nb_NO and other locales
  using names for the months in short date format (#23310).
- Fix wx-config output when using NanoSVG library (#23373).
- Fix bug modifying shared images in wxImage::Clear() (#23555).
- Add EVT_FULLSCREEN event macro (Christian Beier, #23566).
- Clear old attributes when changing wxGrid table (Brian Nixon, #23607).
- Fix background colour of wxVListBox (Maarten Bent, #23641).
- Fix return value of wxAuiToolBarItem::GetDisabledBitmap() (taler21, #23666).
- Fix buffer overflow in wxHTMLDataObject::GetDataHere() (mcorino, #23660).
- Fix crash when loading some mal-formed GIFs (PB, #23409).
- Relax checks on character entry in numeric validators (#12968, #23561).
- Fix wxRibbonToolBar::GetToolByPos() and DeleteToolByPos() (mcorino, #23457).
- Update wxOwnerDrawnComboBox best size when adding items (Reza Karimi, #23681).
- Keep wxProgressDialog size when updating the message (Oleg Samarin, #23727).
- Fix crash when deleting selected item in wxGenericListCtrl (#23729).
- Use DIPs for toolbar image sizes in wxPropertyGrid.
- Fix undefined behaviour in wxImage::Paste() (aurel32, #23791).
- Fix EVT_PRESS_AND_TAP() event macro definition (Kumazuma, #23819).
- Fix wxFileHistory formatting after calling Load() (Hartwig Wiesmann, #23799).
- Fix wxRichTextCtrl layout in high DPI (mbc-one, Maarten Bent, #23828).
- Ensure current cell stays valid when wxGrid table changes (CookieLau, #23751).

wxGTK:
